--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tonysamperi/logger",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.2",
   "description": "A logger that can wrap and control almost every logger library",
   "type": "commonjs",
   "main": "./dist/smp-logger.js",
@@ -34,9 +34,17 @@
     "url": "https://tonysamperi.github.io"
   },
   "repository": {
-    "url": "https://"
+    "type": "git",
+    "url": "https://www.github.com/tonysamperi/smp-logger"
   },
-  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tonysamperi/smp-logger/issues"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npm.org",
+    "access": "public"
+  },
+  "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.5.7",
