--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -6,6 +6,6 @@
         "module": "CommonJS",
         "target": "esnext",
         "moduleResolution": "node",
-        "outDir": "dist"
+        "outDir": "dist/cjs"
     }
 }
