--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tonysamperi/logger",
-  "version": "2.0.0-next.0",
+  "version": "2.0.0",
   "author": {
     "name": "Tony Samperi",
     "email": "git@tonysamperi.it",
